--- a/pages/civil.html
+++ b/pages/civil.html
@@ -1,109 +1,147 @@
 <!doctype html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-   <link rel="stylesheet" href="../css/bootstrap.min.css">
-   <link rel="stylesheet" href="../css/styles.css">
-   <link rel="icon" type="icon/ico" href="../assets/img/favicon.ico">
-  </head>
-  <body>
-    <header> 
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../assets/img/header/logo100212.png" alt="Logo" width="100" height="50">
-            </a>   
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/coaching.html">Coaching Jurídico</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/penal.html">Penal</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/laboral.html">Laboral & Empresarial</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/civil.html">Civil</a>
-              </li>              
-            </ul> 
-          </div>
-        </div>
-      </nav>
+    <title>Derecho Civil</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="../index.html">
+                    <img class="logo" src="../assets/img/header/logo100212.png" alt="Logo" width="100" height="80">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./coaching.html">Coaching Jurídico</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./penal.html">Penal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./laboral.html">Laboral & Empresarial</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./civil.html">Civil</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <main> 
-      <section class="container-fluid">
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../assets/img/body/ft1.jpeg" class="d-block w-100" alt="">
+    <main>
+      <h1 class="text-center" style="color: #d3a97c;">Más de 25 años de profesión</h1>
+        <section class="container-fluid">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../assets/img/body/ft1.jpeg" class="d-block w-100" alt="Imagen 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/img/body/ft2.webp" class="d-block w-100" alt="Imagen 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/img/body/ft3.png" class="d-block w-100" alt="Imagen 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/img/body/ft4.png" class="d-block w-100" alt="Imagen 4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/img/body/ft5.png" class="d-block w-100" alt="Imagen 5">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft2.webp" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft3.png" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft4.png" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft5.png" class="d-block w-100" alt="">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div> 
-
-      </section>
-      
-
-        <!-- FORMULARIO -->
-       <section class="container mt-5">
-          <h2 class="text-center">Contacto</h2>
-          <form class="row">
-            <div class="col-6 mb-3">
-              <label for="exampleInputEmail1" class="form-label"> Email </label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <div class="col-6 mb-3">
-              <label for="nombre" class="form-label"> Nombre </label>
-              <input type="email" class="form-control" id="nombre" aria-describedby="emailHelp">
-            </div>
-            <div class="col-12 mb-3">
-              <label for="texto" class="form-label"> Dejenos su mensaje: </label>
-              <textarea class="form-control" name="" id="texto"></textarea>
-            </div>
-            <div class="col-2">
-              <input type="submit" class="btn btn-primary" value="Enviar">
-            </div>
-          </form>
         </section>
-
-      
-
     </main>
 
-    <footer>
+    <section id="sobre-nosotros" class="container">
+        <h2>¿Qué es?</h2>
+        <p>Es la rama del derecho que regula las relaciones privadas entre las personas, tanto en su vida familiar como en sus relaciones patrimoniales.</p>
+        <h3>¿Qué abarca?</h3>
+        <ul>
+            <li>Contratos</li>
+            <li>Propiedad y posesión</li>
+            <li>Familia</li>
+            <li>Sucesiones</li>
+            <li>Responsabilidad civil</li>
+        </ul>
+    </section>
 
+    <div class="content container">
+      <!-- Video de YouTube -->
+      <div class="video-container">
+          <iframe class="w-100" height="315" src="https://www.youtube.com/embed/x_lvYiXBkns?si=dltuHYosaJp6sJ0W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+
+      <!-- Mapa de Google -->
+      <div class="map-container mt-4">
+          <iframe class="w-100" height="315" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.0410640599307!2d-58.51185142341487!3d-34.67891306147466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc8df52c3ba8b%3A0x64600723ff86c209!2sAv.%20Crovara%20830%2C%20B1768%20Villa%20Madero%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1738454140473!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+
+    <section class="container mt-5">
+      <h2 class="text-center" style="font-size: 50px; color: #d3a97c;">Contacto</h2>
+      <form class="row g-3">
+        <div class="col-sm-12 col-md-6">
+          <label for="exampleInputEmail1" class="form-label"><p style="color: #ffffff; font-size: 20px;">Email</p></label>
+          <input type="email" class="form-control" id="exampleInputEmail1">
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <label for="nombre" class="form-label"><p style="color: #ffffff; font-size: 20px;">Nombre</p></label>
+          <input type="text" class="form-control" id="nombre">
+        </div>
+        <div class="col-12">
+          <label for="texto" class="form-label"><p style="color: #ffffff; font-size: 20px;">Déjenos su mensaje:</p></label>
+          <textarea class="form-control" id="texto"></textarea>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary w-100">Enviar</button>
+        </div>
+      </form>
+    </section>
+    <br><br>
+
+    <footer>
+        <div class="footer-nav">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./coaching.html">Coaching Jurídico</a></li>
+                <li><a href="./penal.html">Penal</a></li>
+                <li><a href="./laboral.html">Laboral & Empresarial</a></li>
+                <li><a href="./civil.html">Civil</a></li>
+            </ul>
+        </div>
+        <div class="footer-contact">
+            <p><strong>Contacto:</strong></p>
+            <p>Email: cordoba.agustin.et20@gmail.com</p>
+            <p>Cel: +54 11 2796-1231</p>
+        </div>
+        <p>&copy; 2025 Mi Sitio Web. Todos los derechos reservados.</p>
     </footer>
 
-  <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
