arregle las rutas del favicon

--- a/pages/coaching.html
+++ b/pages/coaching.html
@@ -6,7 +6,7 @@
     <title>Coaching Jurídico</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" type="icon/ico" href="../assets/img/favicon.ico">
+    <link rel="icon" type="icon/ico" href="../favicon.ico">
   </head>
   <body>
     <header> 
