--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" type="icon/ico" href="./assets/img/favicon.ico">
+    <link rel="icon" type="icon/ico" href="favicon.ico">
   </head>
   <body>
     <header> 
