--- a/pages/laboral.html
+++ b/pages/laboral.html
@@ -7,7 +7,7 @@
     <title>Laboral & Empresarial</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
 
 <body>
