toda la tercera preentrega terminada

--- a/pages/civil.html
+++ b/pages/civil.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+   
+    <!-- SEO -->
+    <meta name="description" content="Asesoría legal en derecho civil: contratos, herencias, propiedad y más. Soluciones jurídicas personalizadas para proteger tus derechos.">
+    <meta name="keywords" content="abogada, derecho civil, asesoría legal, coaching jurídico, derecho laboral, derecho comercial, derecho penal, robos, hurtos, ventas ilegales">
+    
     <title>Derecho Civil</title>
+    
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -12,6 +18,7 @@
 
 <body>
     <header>
+        <!-- BARRA DE NAV -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="../index.html">
@@ -44,7 +51,8 @@
     </header>
 
     <main>
-      <h1 class="text-center" style="color: #d3a97c;">Más de 25 años de profesión</h1>
+        <!-- encabezado h1 -->
+        <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Derecho civil</h1>
         <section class="container-fluid">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -76,6 +84,7 @@
         </section>
     </main>
 
+    <!-- sobre nosotros -->
     <section id="sobre-nosotros" class="container">
         <h2>¿Qué es?</h2>
         <p>Es la rama del derecho que regula las relaciones privadas entre las personas, tanto en su vida familiar como en sus relaciones patrimoniales.</p>
@@ -101,6 +110,8 @@
       </div>
     </div>
 
+
+    <!-- contacto etc -->
     <section class="container mt-5">
       <h2 class="text-center" style="font-size: 50px; color: #d3a97c;">Contacto</h2>
       <form class="row g-3">
@@ -122,6 +133,11 @@
       </form>
     </section>
     <br><br>
+
+    <!-- boton de wsp -->
+    <a href="https://wa.me/1127961231" class="whatsapp-button" target="_blank">
+        <img src="../assets/img/body/wsp.webp" alt="WhatsApp">
+      </a>
 
     <footer>
         <div class="footer-nav">
