--- a/pages/laboral.html
+++ b/pages/laboral.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- SEO -->
+    <meta name="description" content="Defendemos tus derechos laborales y empresariales. Asesoría en contratos, despidos, conflictos empresariales y normativas legales.">
+    <meta name="keywords" content="abogada, derecho civil, asesoría legal, coaching jurídico, derecho laboral, derecho comercial, derecho penal, robos, hurtos, ventas ilegales">
+   
     <title>Laboral & Empresarial</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -12,6 +17,7 @@
 
 <body>
     <header>
+        <!-- BARRA DE NAV -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="../index.html">
@@ -44,7 +50,8 @@
     </header>
 
     <main>
-      <h1 class="text-center" style="color: #d3a97c;">Más de 25 años de profesión</h1>
+        <!-- encabezado h1 -->
+        <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Derecho laboral & empresarial</h1>
         <section class="container-fluid">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -75,6 +82,7 @@
             </div>
         </section>
 
+        <!-- sobre nosotros -->
         <section id="sobre-nosotros" class="container">
             <h2>¿Qué son?</h2>
             <p>El Derecho Laboral regula las relaciones entre empleadores y trabajadores, buscando equilibrar los derechos y deberes de ambas partes.</p>
@@ -103,6 +111,7 @@
           </div>
         </div>
 
+        <!-- contacto etc -->
         <section class="container mt-5">
           <h2 class="text-center" style="font-size: 50px; color: #d3a97c;">Contacto</h2>
           <form class="row g-3">
@@ -123,8 +132,12 @@
             </div>
           </form>
         </section>
-    </main>
+</main>
 
+<!-- boton de wsp -->
+<a href="https://wa.me/1127961231" class="whatsapp-button" target="_blank">
+    <img src="../assets/img/body/wsp.webp" alt="WhatsApp">
+  </a>
     <footer>
         <div class="footer-nav">
             <ul>
