--- a/pages/coaching.html
+++ b/pages/coaching.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- SEO -->
+    <meta name="description" content="Acompañamiento y orientación legal para que tomes decisiones informadas. Sesiones de coaching jurídico para entender y resolver tu situación legal.">
+    <meta name="keywords" content="abogada, derecho civil, asesoría legal, coaching jurídico, derecho laboral, derecho comercial, derecho penal, robos, hurtos, ventas ilegales">
+    
     <title>Coaching Jurídico</title>
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="icon/ico" href="../favicon.ico">
   </head>
   <body>
     <header> 
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <!-- BARRA DE NAV -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="../index.html">
             <img class="logo" src="../assets/img/header/logo100212.png" alt="Logo" width="100" height="80">
@@ -19,7 +26,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
@@ -42,7 +49,8 @@
     </header>
 
     <main> 
-      <h1 class="text-center" style="color: #d3a97c;">Más de 25 años de profesión</h1>
+      <!-- encabezado h1 -->
+      <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Coaching Jurídico</h1>
       <section class="container-fluid">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -74,10 +82,11 @@
       </section>
     </main>
 
+    <!-- sobre nosotros -->
     <section id="sobre-nosotros" class="container">
       <h2> ¿Qué es? </h2>
       <p> Es un proceso de asesoramiento y formación especializado en el ámbito del derecho, diseñado para ayudar a abogados, estudiantes de derecho o personas involucradas en asuntos legales a mejorar sus habilidades estratégicas, argumentativas y procesales.</p>
-      <h1>Objetivos:</h1>
+      <h3>Objetivos:</h3>
       <ul>
           <li>Optimizar la gestión de clientes y casos.</li>
           <li>Ayudar a enfrentar desafíos legales con mayor seguridad.</li>
@@ -97,6 +106,7 @@
       </div>
     </div>
 
+    <!-- contacto etc -->
     <section class="container mt-5">
       <h2 class="text-center" style="font-size: 50px; color: #d3a97c;">Contacto</h2>
       <form class="row g-3">
@@ -117,6 +127,11 @@
         </div>
       </form>
     </section>
+
+    <!-- boton de wsp -->
+    <a href="https://wa.me/1127961231" class="whatsapp-button" target="_blank">
+      <img src="../assets/img/body/wsp.webp" alt="WhatsApp">
+    </a>
 
     <footer>
       <div class="footer-nav">
