--- a/pages/penal.html
+++ b/pages/penal.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- SEO -->
+    <meta name="description" content="Defensa penal con experiencia. Protección de derechos en juicios, denuncias, delitos y procesos penales. Asesoría confidencial y profesional.">
+    <meta name="keywords" content="abogada, derecho civil, asesoría legal, coaching jurídico, derecho laboral, derecho comercial, derecho penal, robos, hurtos, ventas ilegales">
+   
     <title>Derecho Penal</title>
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="icon/ico" href="../favicon.ico">
   </head>
   <body>
     <header> 
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <!-- BARRA DE NAV -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="../index.html">
             <img class="logo" src="../assets/img/header/logo100212.png" alt="Logo" width="100" height="80">
@@ -19,7 +26,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
@@ -42,7 +49,8 @@
     </header>
 
     <main> 
-      <h1 class="text-center" style="color: #d3a97c;">Más de 25 años de profesión</h1>
+      <!-- encabezado h1 -->
+      <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Derecho penal</h1>
       <section class="container-fluid">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -74,11 +82,12 @@
       </section>
     </main>
 
+    <!-- sobre nosotros -->
     <section id="sobre-nosotros">
       <h2> ¿Qué es? </h2>
       <p> Es la rama del derecho que regula los delitos, las penas y las medidas de seguridad. Su objetivo principal es proteger la sociedad mediante la prevención y sanción de conductas que atentan contra el orden jurídico. </p>
       <br>
-      <h1 style="text-decoration: none;"> ¿Qué abarca? </h1>
+      <h3> ¿Qué abarca? </h3>
       <ul>
         <li>Homicidio</li>
         <li>Robo</li>
@@ -100,6 +109,7 @@
       </div>
     </div>
 
+    <!-- contacto etc -->
     <section class="container mt-5">
       <h2 class="text-center" style="font-size: 50px; color: #d3a97c;">Contacto</h2>
       <form class="row g-3">
@@ -121,6 +131,10 @@
       </form>
     </section>
     <br><br>
+    <!-- boton de wsp -->
+    <a href="https://wa.me/1127961231" class="whatsapp-button" target="_blank">
+      <img src="../assets/img/body/wsp.webp" alt="WhatsApp">
+    </a>
 
     <footer>
       <div class="footer-nav">
