--- a/index.html
+++ b/index.html
@@ -58,25 +58,17 @@
                 <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"></li>
                 <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"></li>
                 <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"></li>
-                <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3"></li>
-                <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4"></li>
             </ul>
     
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/body/ft1.jpeg" class="d-block w-100" alt="">
+                    <img src="./assets/img/body/home/1erpag1ft.jpg" class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/body/ft2.webp" class="d-block w-100" alt="">
+                    <img src="./assets/img/body/home/1erpag2ft.jpg" class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/body/ft3.png" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/body/ft4.png" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/body/ft5.png" class="d-block w-100" alt="">
+                    <img src="./assets/img/body/home/1erpag3ft.jpg" class="d-block w-100" alt="">
                 </div>
             </div>
     
@@ -111,7 +103,7 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="imghvr-push-left">
-            <img src="./assets/img/body/ft2.webp" alt="Coaching jurídico">
+            <img src="./assets/img/body/coaching/pag2ft1.jpg" alt="Coaching jurídico">
             <figcaption>
               <h3>Coaching Jurídico</h3>
               <p>Guía para abogados en su carrera y gestión de estudios.</p>
@@ -120,7 +112,7 @@
         </div>
         <div class="col-md-4">
           <figure class="imghvr-push-left">
-            <img src="./assets/img/body/ft3.png" alt="Derecho Penal">
+            <img src="./assets/img/body/penal/pag3ft1.jpg" alt="Derecho Penal">
             <figcaption>
               <h3>Derecho Penal</h3>
               <p>Defensa en procesos penales y asesoramiento legal.</p>
@@ -129,7 +121,7 @@
         </div>
         <div class="col-md-4">
           <figure class="imghvr-push-left">
-            <img src="./assets/img/body/ft4.png" alt="Laboral & Empresarial">
+            <img src="./assets/img/body/laboral/pag4ft1.jpg" alt="Laboral & Empresarial">
             <figcaption>
               <h3>Derecho Laboral & Empresarial</h3>
               <p>En defensa del trabajador o del empresario.</p>
@@ -138,7 +130,7 @@
         </div>
         <div class="col-md-4">
           <figure class="imghvr-push-left">
-            <img src="./assets/img/body/ft5.png" alt="Derecho Civil">
+            <img src="./assets/img/body/civil/pag5ft3.jpg" alt="Derecho Civil">
             <figcaption>
               <h3>Derecho Civil</h3>
               <p>En defensa de los derechos y obligaciones entre personas y bienes.</p>
