--- a/pages/civil.html
+++ b/pages/civil.html
@@ -55,21 +55,23 @@
         <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Derecho civil</h1>
         <section class="container-fluid">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
+                <!-- Indicadores del carrusel -->
+          <ul class="carousel-indicators">
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"></li>
+          </ul>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/img/body/ft1.jpeg" class="d-block w-100" alt="Imagen 1">
+                        <img src="../assets/img/body/civil/pag5ft1.jpg" class="d-block w-100" alt="Imagen 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/img/body/ft2.webp" class="d-block w-100" alt="Imagen 2">
+                        <img src="../assets/img/body/civil/pag5ft2.jpg" class="d-block w-100" alt="Imagen 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/img/body/ft3.png" class="d-block w-100" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/img/body/ft4.png" class="d-block w-100" alt="Imagen 4">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/img/body/ft5.png" class="d-block w-100" alt="Imagen 5">
+                        <img src="../assets/img/body/civil/pag5ft3.jpg" class="d-block w-100" alt="Imagen 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
