--- a/pages/coaching.html
+++ b/pages/coaching.html
@@ -53,21 +53,23 @@
       <h1 class="text-center" style="color: #d3a97c; font-style: italic;">Coaching Jurídico</h1>
       <section class="container-fluid">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
+          <!-- Indicadores del carrusel -->
+          <ul class="carousel-indicators">
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2"></li>
+        </ul>
+
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/img/body/ft1.jpeg" class="d-block w-100" alt="">
+              <img src="../assets/img/body/coaching/pag2ft1.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="../assets/img/body/ft2.webp" class="d-block w-100" alt="">
+              <img src="../assets/img/body/coaching/pag2ft2.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
-              <img src="../assets/img/body/ft3.png" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft4.png" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/body/ft5.png" class="d-block w-100" alt="">
+              <img src="../assets/img/body/coaching/pag2ft3.jpg" class="d-block w-100" alt="">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
